Name:               Gsom
Version:            0.0
Cabal-Version:      >= 1.6.0.1
Build-Type:         Simple
License:            BSD3
License-File:       LICENSE
Data-Files:         README
Author:             Stephan Günther
Maintainer:         Stephan Günther <gnn.github@gmail.com>
Category:           Datamining, Clustering
Synopsis:           An implementation of the GSOM clustering algorithm.
Description:
  See <http://en.wikipedia.org/wiki/GSOM> for an explanation of the algorithm.

Library
  Build-Depends:    base, containers, random, time, stm
  Exposed-Modules:  Data.Datamining.Clustering.Gsom.Node.Coordinates,
                    Data.Datamining.Clustering.Gsom.Input, 
                    Data.Datamining.Clustering.Gsom.Lattice, 
                    Data.Datamining.Clustering.Gsom.Node, 
                    Data.Datamining.Clustering.Gsom.Phase

  GHC-Options:     -O2 -fvia-C -optc-O3

Executable          unit-square
  Main-is:          unit-square.lhs
  Hs-Source-Dirs:   ., mains
  Other-Modules:    Data.Datamining.Clustering.Gsom.Lattice, 
                    Data.Datamining.Clustering.Gsom.Node, 
                    Data.Datamining.Clustering.Gsom.Phase

  GHC-Options:     -O2 -fvia-C -optc-O3

